// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kinetics section Additional notes contain kcat expceptional case while kcat is empty 1`] = `
Array [
  "kcat is 118.44 min(-1) and 20.80 min (-1) for glyoxalase activity with glyoxal (GO) and methylglyoxal (MGO) as substrate, respectively (at pH 7.4 and 37 degrees Celsius) (PubMed:26678554)",
  "The apparent kcat of MGO and GO degradation is 0.29 sec(-1), and 0.42 sec(-1), respectively (at 22 degrees Celsius) (PubMed:26774339).",
]
`;

exports[`Kinetics section Kcats should be populated when one or more values are combined in a sentence 1`] = `
Object {
  "constant": "4.5 min(-1)",
  "evidences": Array [
    Object {
      "evidenceCode": "ECO:0000269",
      "id": "10606519",
      "source": "PubMed",
    },
  ],
  "key": "kcat4.5 min(-1)",
  "notes": "with arsenate as substrate  2 uM arsenate",
  "ph": undefined,
  "temp": undefined,
}
`;

exports[`Kinetics section Kcats should be populated when one or more values are combined in a sentence 2`] = `
Object {
  "constant": "9.9 min(-1)",
  "evidences": Array [
    Object {
      "evidenceCode": "ECO:0000269",
      "id": "10606519",
      "source": "PubMed",
    },
  ],
  "key": "kcat9.9 min(-1)",
  "notes": "with arsenate as substrate  10 mM arsenate",
  "ph": undefined,
  "temp": undefined,
}
`;

exports[`Kinetics section should return respective rows for KM 1`] = `
Object {
  "constant": "438 μM",
  "evidences": Array [
    Object {
      "evidenceCode": "ECO:0000269",
      "id": "24343376",
      "source": "PubMed",
    },
  ],
  "key": "438ATP (at 42 degrees Celsius, pH 8 and 2 M NaCl)",
  "notes": "   2 M NaCl",
  "ph": "8",
  "substrate": "ATP",
  "temp": "42",
}
`;
